--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -7,10 +7,11 @@ name: Mark stale issues and pull requests
 
 on:
   pull_request:
+env:
+  GH_TOKEN: ${{ github.token }}
 
 jobs:
   stale:
-
     runs-on: ubuntu-latest
     permissions:
       issues: write
